--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -25,3 +25,63 @@ li{
     --orange: #FD7238;
     --light-orange: #FFE0D3;
     }
+    body{
+        background: var(--grey);
+    }
+
+
+    /* Side bar */
+    #sidebar{
+        position : fixed;
+        top:0;
+        left: 0;
+        width:280px;
+        height:100%;
+        background: var(--light);
+        z-index: 1000;
+        font-family: var(--lato);
+    }
+    #sidebar .brand{
+        font-size: 24px;
+        font-weight: 700;
+        height: 56px;
+        display: flex;
+        align-items: center;
+        color: var(--blue);
+    }
+    #sidebar .brand .bx{
+        min-width: 60px;
+        display:flex;
+        justify-content: center;
+    }
+    #sidebar .side-menu{
+        width:100%;
+        margin-top: 48px;
+    }
+    #sidebar .side-menu li{
+        height: 48px;
+        background: var(--grey);
+        margin-left: 6xp;
+        border-radius: 48px 0 0 48px;
+        padding: 4px;
+    }
+    #sidebar .side-menu li a{
+        width: 100%;
+        height: 100%;
+        background: var(--light);
+        display: flex;
+        align-items: center;
+        border-radius: 48px ;
+        font-size: 16px;
+        color: var(--dark);
+
+    }
+    #sidebar .side-menu li a .bx{
+        min-height: calc(60px-((4px+6px)*2));
+        display: flex;
+        justify-content: center;
+    }
+
+
+
+    /* Side bar */
